# ComputationalMath

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ComputationalMath/: CMakeLists.txt
ComputationalMath/benchmark/: CMakeLists.txt  MatrixTransposed.cpp  benchmark.cpp
ComputationalMath/cmake/: GoogleTest.cmake
ComputationalMath/src/: CMakeLists.txt
ComputationalMath/src/Geometry/: Delaunay.cpp  Delaunay.h  Delaunay.hpp  MeshGenerator.cpp  MeshGenerator.hpp  Rectangle.cpp  Rectangle.h  RectangularMesh.h  RectangularMesh.hpp  RefinedDelaunay.cpp  RefinedDelaunay.h  RefinedDelaunay.hpp
ComputationalMath/src/Geometry/Structures/: HalfEdge.h  HalfEdge.hpp  HalfEdgeTriangulation.cpp  HalfEdgeTriangulation.h  HalfEdgeTriangulation.hpp  Mesh2D.cpp  Mesh2D.h  Mesh2D.hpp  PlanarStraightLineGraph.cpp  PlanarStraightLineGraph.h  PlanarStraightLineGraph.hpp  Rectangle.cpp  Rectangle.h  Rectangle.hpp  SimplexElements.cpp  SimplexElements.h  SimplexElements.hpp  Triangle.cpp  Triangle.h  Triangle.hpp  Vertex.cpp  Vertex.h  Vertex.hpp
ComputationalMath/src/LinearAlgebra/: ColumnVector.cpp  ColumnVector.h  FactorizationLU.cpp  FactorizationLU.h  FactorizationLU.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  SimdOps.cpp  SimdOps.h  SimdOps.hpp  VectorBase.h  VectorBase.hpp
ComputationalMath/tests/: CMakeLists.txt  TestHelper.cpp  TestHelper.h  TestHelper.hpp
ComputationalMath/tests/Geometry/: DelaunayTests.cpp  RectangleTests.cpp  RefinedDelaunayTests.cpp
ComputationalMath/tests/Geometry/Structures/: RectangleTests.cpp  SimplexElementTests.cpp  VertexTests.cpp
ComputationalMath/tests/LinearAlgebra/: ColumnVectorTests.cpp  FactorizationLuTests.cpp  MatrixTests.cpp  SimdTests.cpp  VectorBaseTests.cpp
Physics/: CMakeLists.txt
Physics/src/: App.cpp  Axis.cpp  Axis.h  DrawableGraph.cpp  DrawableGraph.h  DrawableMesh.cpp  DrawableMesh.h  FemScene.hpp  RefinedDelaunayCircle.h  main.cpp
Physics/src/Drawables/: Axis.cpp  Axis.h  Axis.hpp  DrawableGraph.cpp  DrawableGraph.hpp  DrawableMesh.cpp  DrawableMesh.h  DrawableMesh.hpp  DrawableTimeDependentFemMesh.cpp  DrawableTimeDependentFemMesh.hpp
Physics/src/Fem/: FemAssembler.cpp  FemAssembler.hpp  FemProblem2dBase.cpp  FemProblem2dBase.h  FemProblem2dBase.hpp  HeatEquationWithoutSource.cpp  HeatEquationWithoutSource.hpp  HelmholtzEquationWithSource.cpp  HelmholtzEquationWithSource.h  HelmholtzEquationWithSource.hpp  LaplaceFem.cpp  LaplaceFem.h  LaplaceFem.hpp
Rendering/: CMakeLists.txt
Rendering/src/: CMakeLists.txt
Rendering/src/Render/: Event.hpp  PlotCamera.cpp  PlotCamera.hpp  Window.cpp  Window.hpp
Rendering/src/Render/Core/: CameraTransformation.hpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Rendering/src/Render/Debug/: Logger.cpp  Logger.hpp  gl_debug.cpp  gl_debug.hpp
Rendering/src/Render/Drawable/: DrawableObject.hpp  ObjectScene.cpp  ObjectScene.hpp  SceneBase.hpp
Rendering/src/Render/Shader/: ScalarColorShader.hpp  SolidColorShader.hpp  VertexColorShader.hpp
